--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,21 +4,24 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
     <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-route.min.js'></script>
-    <script src="//code.angularjs.org/1.2.19/i18n/angular-locale_es-es.js"></script>
+    <script src="//code.angularjs.org/1.2.19/i18n/angular-locale_de-de.js"></script>
     <script src="application.js"></script>
 
 </head>
 <body>
-    <h1>Reitverein: Marc y Luis</h1>
+    <h1>Willkommen in der angularMV!</h1>
+
+    <h4>Die angularMV ist das neue Mitgliederverwaltungssystem der Elmshorner Reitvereins und besitzt die folgenden Funktionen:</h4>
 
     <ul>
-        <a href="#Members"><button>Mitglieder</button></a>
-        <a href="#createMember"><button>Mietglieder anlegen</button></a>
+        <a href="#Members"><button>Mitgliederliste</button></a><p></p>
+        <a href="#createMember"><button>Neues Mitglied anlegen</button></a><p></p>
+        <a href="#searchMember"><button>Mitglied suchen</button></a>
     </ul>
 
     <div ng-view></div>
 
-    <h3>Feste Text.</h3>
+    <h3>(c)2015 MyL</h3>
 
 </body>
 </html>
