--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,9 +14,10 @@
     <h4>Die angularMV ist das neue Mitgliederverwaltungssystem der Elmshorner Reitvereins und besitzt die folgenden Funktionen:</h4>
 
     <ul>
-        <a href="#Members"><button>Mitgliederliste</button></a><p></p>
-        <a href="#createMember"><button>Neues Mitglied anlegen</button></a><p></p>
+        <a href="#Members"><button>Mitgliederliste</button></a>
+        <a href="#createMember"><button>Neues Mitglied anlegen</button></a>
         <a href="#searchMember"><button>Mitglied suchen</button></a>
+        <a href="#deleteMember"><button>Mitglied löschen</button></a>
     </ul>
 
     <div ng-view></div>
