createMember angepasst, enum für Mitgliedsarten erstellt Funktion MemberRequest besaß keinen Payload??

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
         <a href="#Members"><button>Mitgliederliste</button></a>
         <a href="#createMember"><button>Neues Mitglied anlegen</button></a>
         <a href="#searchMember"><button>Mitglied suchen</button></a>
-        <a href="#deleteMember"><button>Mitglied lÃ¶schen</button></a>
+        <a href="#deleteMember"><button>Mitglied löschen</button></a>
     </ul>
 
     <div ng-view></div>
