--- a/src/main/webapp/createMember.html
+++ b/src/main/webapp/createMember.html
@@ -59,11 +59,11 @@
            type="date"
            ng-model="MemberRequest.birthday"/><br>
 
-    <label for="entry_date">Eintrittsdatum:</label>
-    <input id="entry_date"
-           name="entry_date"
+    <label for="entryDate">Eintrittsdatum:</label>
+    <input id="entryDate"
+           name="entryDate"
            type="date"
-           ng-model="MemberRequest.entry_date"/><br>
+           ng-model="MemberRequest.entryDate"/><br>
 
     <label  ng-show="Member.memberType === 'FA'"
             for="family_members">Familienmitglieder:</label>
