--- a/src/main/webapp/Members.html
+++ b/src/main/webapp/Members.html
@@ -15,12 +15,12 @@
     </tr>
     <tr ng-repeat="member in model.members">
         <td>{{member.name}}</td>
-        <td>{{member.surname}}</td>>
+        <td>{{member.surname}}</td>
         <td>{{member.city}}</td>
         <td>{{member.address}}</td>
         <td>{{member.zipcode}}</td>
         <td>{{member.birthday}}</td>
-        <td>{{member.entry_date}}</td>
+        <td>{{member.entryDate}}</td>
         <td>{{member.family_members}}</td>
         <td>{{member.iban}}</td>
 
