--- a/src/main/webapp/Members.html
+++ b/src/main/webapp/Members.html
@@ -11,18 +11,11 @@
 
     <table border>
     <tr>
-        <th>Vorname</th> <th>Name</th> <th>Wohnort</th> <th>Adresse</th> <th>PLZ</th> <th>Geburtsdatum</th> <th>Eintrittsdatum</th> <th>Familienmitglied</th> <th>IBAN-Kontonr.</th>
+        <th>Vorname</th> <th>Name</th>
     </tr>
     <tr ng-repeat="member in model.members">
         <td>{{member.name}}</td>
         <td>{{member.surname}}</td>
-        <td>{{member.city}}</td>
-        <td>{{member.address}}</td>
-        <td>{{member.zipcode}}</td>
-        <td>{{member.birthday}}</td>
-        <td>{{member.entryDate}}</td>
-        <td>{{member.family_members}}</td>
-        <td>{{member.iban}}</td>
 
     </tr>
 </table>
