--- a/src/main/webapp/createMember.html
+++ b/src/main/webapp/createMember.html
@@ -8,7 +8,7 @@
 
 <fieldset>
 
-    <legend>Mitglieder anlegen:</legend>
+    <legend>Mitglieder banlegen:</legend>
 
     <label for="memberType">MemberType:</label>
     <input id="memberType"
