Erweiterung um MemberType-Klassen, Vervollständigung aller Felder in Member, Anpassung HTML-Seiten, anfängliche Implentierung eines SerachMemberRequest im model, anfängliche Implentierung einer Input-Validierung inkl. Exception-Klasse

--- a/src/main/webapp/deleteMember.html
+++ b/src/main/webapp/deleteMember.html
@@ -12,11 +12,11 @@
 
 
 
-        <label for="name">Vorname:</label>
-        <input id="name"
-               name="name"
+        <label for="name1">Vorname:</label>
+        <input id="name1"
+               name="name1"
                type="text"
-               ng-model="todelete.name"/><br>
+               ng-model="todelete.name1"/><br>
 
         <label for="surname">Nachname:</label>
         <input id="surname"
@@ -29,7 +29,7 @@
     {{todelete.name}}
     {{todelete.surname}}
 
-    <button ng-click="delete()">Delete</button>
+    <button ng-click="delete()">Löschen</button>
 
 
 </fieldset>
