--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,20 +9,20 @@
 
 </head>
 <body>
-    <h1>Willkommen in der angularMV!</h1>
+    <h1>Willkommen in der angularMV</h1>
 
-    <h4>Die angularMV ist das neue Mitgliederverwaltungssystem der Elmshorner Reitvereins und besitzt die folgenden Funktionen:</h4>
+    <h4>Die angularMV ist das Mitgliederverwaltungssystem des Elmshorner Reitvereins!</h4>
 
     <ul>
-        <a href="#Members"><button>Mitgliederliste</button></a>
+        <a href="#Members"><button>Mitgliederübersicht</button></a>
         <a href="#createMember"><button>Neues Mitglied anlegen</button></a>
-        <a href="#searchMember"><button>Mitglied suchen</button></a>
-        <a href="#deleteMember"><button>Mitglied löschen</button></a>
+        <a href="#searchMember"><button>Mitglieder suchen</button></a>
+        <!--<a href="#deleteMember"><button>Mitglied löschen</button></a>-->
     </ul>
 
     <div ng-view></div>
 
-    <h3>(c)2015 MyL</h3>
+    <h5>(c) 2015 MyL</h5>
 
 </body>
 </html>
