--- a/src/main/webapp/searchMember.html
+++ b/src/main/webapp/searchMember.html
@@ -10,12 +10,11 @@
 
     <legend>Mitglieder suchen:</legend>
 
-
-    <label for="name">Vorname:</label>
-    <input id="name"
-           name="name"
+    <label for="name1">Vorname:</label>
+    <input id="name1"
+           name="name1"
            type="text"
-           ng-model="search.name"/><br>
+           ng-model="search.name1"/><br>
 
     <label for="surname">Nachname:</label>
     <input id="surname"
@@ -23,7 +22,7 @@
            type="text"
            ng-model="search.surname"/><br>
 
-    </select><br>
+    <br>
 
     <button ng-click="search()">Suchen</button>
 
