--- a/src/main/webapp/Members.html
+++ b/src/main/webapp/Members.html
@@ -2,25 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mitgliederliste</title>
+    <title>Mitgliederübersicht</title>
 </head>
 <body>
 
-<h1>Mitglieder:</h1>
+<h2>Übersicht über alle Mitglieder:</h2>
 
-
-    <table border>
+    <table border="1">
     <tr>
-        <th>Vorname</th> <th>Name</th> <th>Standort</th> <th>Adresse</th> <th>PLZ</th>
+        <th>Vorname</th>
+        <th>Nachname</th>
+        <th>Adresse</th>
+        <th>Wohnort</th>
+        <th>PLZ</th>
+        <th>Geburtsdatum</th>
+        <th>Mitgliedsart</th>
+        <th>Eintrittsdatum</th>
     </tr>
-    <tr ng-repeat="member in model.members">
-        <td>{{member.name}}</td>
+    <tr ng-repeat="member in model.members | orderBy:['surname', 'name']">
+     <!--//   ng-click="listController.selectMember(member)" ng-dblclick="listController.editMember(member)"-->
+     <!--//   ng-class="{selectedMember:(member == model.selectedMember)}">-->
+        <td>{{member.name1}}</td>
         <td>{{member.surname}}</td>
-        <td>{{member.city}}</td>
         <td>{{member.address}}</td>
+        <td>{{member.city}}</td>
         <td>{{member.zipcode}}</td>
-
+        <td>{{member.birthday}}</td>
+        <td>{{member.memberType}}</td>
+        <td>{{member.entryDate}}</td>
     </tr>
+       <!-- <tr>
+            <td colspan="5">
+                <input type="submit" value="New Room" ng-click="listController.newRoom()"/>
+                <input type="submit" value="Edit Room" ng-click="listController.editRoom(model.selectedRoom)"
+                       ng-disabled="!model.selectedRoom"/>
+                <input type="submit" value="Delete Room" ng-click="listController.deleteRoom()"
+                       ng-disabled="!model.selectedRoom"/>
+            </td>
+        </tr>-->
+
 </table>
 
 </body>
