--- a/src/main/webapp/searchMember.html
+++ b/src/main/webapp/searchMember.html
@@ -10,6 +10,7 @@
 
     <legend>Mitglieder suchen:</legend>
 
+    <!--"Name" in "Name1" geändert, damit Feld befüllbar ist!-->
     <label for="name1">Vorname:</label>
     <input id="name1"
            name="name1"
