Wichtige änderungen, suche immplementiert

--- a/src/main/webapp/createMember.html
+++ b/src/main/webapp/createMember.html
@@ -34,13 +34,19 @@
            type="text"
            ng-model="member.city"/><br>
 
+    <label for="address">Adresse:</label>
+    <input id="address"
+           name="address"
+           type="text"
+           ng-model="member.address"/><br>
+
     <label for="zipcode">Zipcode:</label>
     <input id="zipcode"
            name="zipcode"
            type="text"
-           ng-model="model.member.zipcode"/><br>
+           ng-model="member.zipcode"/><br>
 
-    </select><br>
+
 
     <button ng-click="anlegen()">Anlegen</button>
 
