kein name1 mehr

--- a/src/main/webapp/Members.html
+++ b/src/main/webapp/Members.html
@@ -22,7 +22,7 @@
     <tr ng-repeat="member in model.members | orderBy:['surname', 'name']">
      <!--//   ng-click="listController.selectMember(member)" ng-dblclick="listController.editMember(member)"-->
      <!--//   ng-class="{selectedMember:(member == model.selectedMember)}">-->
-        <td>{{member.name1}}</td>
+        <td>{{member.name}}</td>
         <td>{{member.surname}}</td>
         <td>{{member.address}}</td>
         <td>{{member.city}}</td>
