--- a/src/main/webapp/createMember.html
+++ b/src/main/webapp/createMember.html
@@ -17,11 +17,11 @@
            ng-model="member.memberType"/><br>
     </div>
 
-    <label for="name1">Vorname:</label>
-    <input id="name1"
-           name="name1"
+    <label for="name">Vorname:</label>
+    <input id="name"
+           name="name"
            type="text"
-           ng-model="member.name1"/><br>
+           ng-model="member.name"/><br>
 
     <label for="surname">Nachname:</label>
     <input id="surname"
