--- a/src/main/webapp/searchMember.html
+++ b/src/main/webapp/searchMember.html
@@ -11,11 +11,11 @@
     <legend>Mitglieder suchen:</legend>
 
     <!--"Name" in "Name1" geändert, damit Feld befüllbar ist!-->
-    <label for="name1">Vorname:</label>
-    <input id="name1"
-           name="name1"
+    <label for="name">Vorname:</label>
+    <input id="name"
+           name="name"
            type="text"
-           ng-model="search.name1"/><br>
+           ng-model="search.name"/><br>
          
 
     <label for="surname">Nachname:</label>
