Bezug "Members" in application.js auf "members" umbenannt, Kommentare ergänzt, Favicon hinzugefügt -> Bis auf Payment-Ansicht alles lauffähig!

--- a/src/main/webapp/members.html
+++ b/src/main/webapp/members.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mitgliederübersicht</title>
-    <link href="StyleSheet.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -14,7 +14,7 @@
     <thead>
 
     <tr>
-        <th>Nº</th>
+        <th>ID</th>
         <th>Vorname</th>
         <th>Nachname</th>
         <th>Adresse</th>
