--- a/src/main/webapp/searchMember.html
+++ b/src/main/webapp/searchMember.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <link href="StyleSheet.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
 
     <meta charset="UTF-8">
     <title>Suchergebnisse</title>
@@ -14,7 +14,6 @@
 
     <legend>Mitglieder suchen:</legend>
 
-    <!--"Name" in "Name1" geändert, damit Feld befüllbar ist!-->
     <label for="name">Vorname:</label>
     <input id="name"
            name="name"
