--- a/src/main/webapp/createMember.html
+++ b/src/main/webapp/createMember.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mitglieder anlegen</title>
-    <link href="StyleSheet.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
 
 </head>
 <body>
