--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
     <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-route.min.js'></script>
     <script src="application.js"></script>
-    <link href="StyleSheet.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
 
 </head>
 <body>
