--- a/src/main/webapp/payments.html
+++ b/src/main/webapp/payments.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <link href="StyleSheet.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
 
     <meta charset="UTF-8">
     <title>Payments</title>
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<h1>Payments Mitglieder: {{id}}</h1>
+<h1>Zahlungsübersicht zu Mitgliedsnummer: {{id}}</h1>
 
 <table>
     <thead>
@@ -46,7 +46,7 @@
 
 <div></div>
 
-<a href="#addPayment/{{id}}"><button>Add Payment</button></a>
+<a href="#addPayment/{{id}}"><button>Zahlung hinzufügen</button></a>
 
 
 </body>
